# recisdb-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
b25-sys/src/bindings/: mod.rs
recisdb-cli/: Cargo.toml
recisdb-cli/src/: context.rs  main.rs  utils.rs
recisdb-cli/src/commands/: mod.rs  utils.rs
recisdb-rs/: Cargo.toml
recisdb-rs/src/: channels.rs  io.rs  lib.rs  recording.rs  tuner.rs
recisdb-rs/src/tuner/linux/: character_device.rs  dvbv5.rs  mod.rs
recisdb-rs/src/tuner/windows/: mod.rs
