[package]
name = "recisdb"
version = "1.2.4"
authors = ["maleicacid <maleicacid824+dev@gmail.com>"]
edition = "2021"
description = "recisdb can read both Unix chardev-based and BonDriver-based TV sources."
build = "build.rs"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kazuki0824/recisdb-rs.git"
keywords = ["cli", "dtv", "japan", "broadcast", "b25"]
categories = ["multimedia::video", "api-bindings"]

[features]
#https://gitlab.alpinelinux.org/alpine/aports/-/issues/12226
bg-static = ["bindgen/static"]
bg-runtime = ["bindgen/runtime"]
crypto = [ "b25-sys/block00cbc", "b25-sys/block40cbc" ]
dvb = [ "dvbv5", "dvbv5-sys" ]
prioritized_card_reader = [ "b25-sys/prioritized_card_reader" ]
default = [ "bg-runtime", "prioritized_card_reader" ]

[dependencies]
b25-sys = { path = "../b25-sys" }
cpp_utils = "0.3.0"
futures-util = { version = "0.3.26", features = ["io"], default-features = false }
log = "^0.4.17"
nom = "7.1.3"
pin-project-lite = "0.2.9"

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false }
cc = { version = "1.2", features = ["parallel"] }
glob = "0.3"

[target.'cfg(windows)'.dependencies]
libloading = "^0.8.0"

[target.'cfg(unix)'.dependencies]
dvbv5 = { version = "0.2.6", optional = true }
dvbv5-sys = { version = "*", optional = true }
libc = "0.2"
nix = { version = "^0.29.0", features = ["ioctl"] }

[package.metadata.deb]
